# horton-grid

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  HEADER  MANIFEST.in  README.md  cleancode.sh  install.sh  pyproject.toml  requirements.txt  ruff.toml  setup.py  updateheaders.py
data/examples/: expectation_r.py
data/grids/: tv-13.7-4.txt  tv-13.7-6.txt  tv-13.7-7.txt  tv-13.7-8.txt
horton_grid/: __init__.py  cache.py  cell.cpp  cell.h  cell.pxd  cext.pxd  cext.pyx  constants.py  context.py  context.py.bak  exceptions.py  log.py  moments.cpp  moments.pxd  moments.py  nucpot.cpp  nucpot.h  nucpot.pxd  periodic.py  quadprog.py  units.py  utils.py
horton_grid/data/examples/: expectation_r.py
horton_grid/data/grids/: tv-13.7-3.txt
horton_grid/grid/: __init__.py  atgrid.py  base.py  becke.cpp  becke.pxd  cext.pxd  cext.pyx  cubic_spline.cpp  cubic_spline.h  cubic_spline.pxd  evaluate.cpp  evaluate.h  evaluate.pxd  lebedev_laikov.cpp  lebedev_laikov.pxd  molgrid.py  ode2.cpp  ode2.h  ode2.pxd  ode2.py  poisson.py  radial.py  rtransform.cpp  rtransform.pxd  uniform.cpp  uniform.h  uniform.pxd  utils.cpp  utils.h  utils.pxd  utils.py  visual.py
horton_grid/grid/test/: __init__.py  common.py  test_atgrid.py  test_base.py  test_becke.py  test_cubic_spline.py  test_molgrid.py  test_ode2.py  test_poisson.py  test_radial.py  test_rtransform.py  test_uniform.py  test_utils.py  test_visual.py
horton_grid/io/: __init__.py  cube.py  internal.py  lockedh5.py  utils.py  xyz.py
horton_grid/io/test/: common.py  test_cube.py  test_internal.py  test_iodata.py  test_lockedh5.py  test_xyz.py
horton_grid/test/: common.py  test_cache.py  test_cell.py  test_context.py  test_examples.py  test_log.py  test_moments.py  test_periodic.py  test_quadprog.py  test_utils.py
src/horton_grid/: __init__.py  cell.cpp  cext.pyx  context.py  log.py  moments.h  nucpot.pxd  quadprog.py  units.py  utils.py
src/horton_grid/data/examples/: expectation_r.py
src/horton_grid/data/grids/: tv-13.7-5.txt
src/horton_grid/espfit/: __init__.py  cext.pyx  cost.py  electrostatics.h  electrostatics.pxd  mask.h  mask.pxd
src/horton_grid/grid/: atgrid.py  base.py  becke.cpp  becke.h  cext.pyx  cubic_spline.cpp  cubic_spline.h  cubic_spline.pxd  evaluate.cpp  lebedev_laikov.cpp  lebedev_laikov.h  lebedev_laikov.pxd  molgrid.py  ode2.pxd  poisson.py  radial.py  rtransform.cpp  rtransform.h  rtransform.pxd  uniform.cpp  utils.cpp  utils.pxd  visual.py
src/horton_grid/grid/test/: common.py  test_atgrid.py  test_base.py  test_cubic_spline.py  test_lebedev_laikov.py  test_ode2.py
src/horton_grid/io/: cube.py  lockedh5.py  utils.py  xyz.py
src/horton_grid/test/: test_context.py  test_examples.py  test_moments.py  test_periodic.py
tests/: common.py  test_cell.py  test_context.py  test_moments.py  test_quadprog.py
tests/espfit/: test_cext.py  test_cost.py  test_mask.py
tests/grid/: 2  common.py  test_atgrid.py  test_base.py  test_becke.py  test_cubic_spline.py  test_lebedev_laikov.py  test_molgrid.py  test_ode2.py  test_poisson.py  test_radial.py  test_rtransform.py  test_uniform.py  test_utils.py  test_visual.py
tests/io/: test_lockedh5.py
